--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,7 @@
 .App {
-  justify-content: center;
+  align-items: center;
   display: flex;
   width: 100%;
   height: 100%;
+  flex-direction: column;
  }
