--- a/client/src/components/MenuBar/Menu.scss
+++ b/client/src/components/MenuBar/Menu.scss
@@ -9,7 +9,7 @@
     text-align: center;
     line-height: 5vh;
     font-weight: bold;
-    font-size: large;
+    font-size: 1rem;
     color: #7e8a97;  
   }
   &:hover {
