--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -57,8 +57,35 @@ ul {
 em {
   font-style: normal;
 }
-html, body , .root{
+textarea:focus, input:focus{
+  outline: none;
+}
+html, body , #root, .root{
   width: 100%;
   height: 100%;
   position: relative;
+}
+
+html {
+  @media only screen and (max-width: 600px ) {
+    font-size: 10px;
+  }
+  @media screen and (min-width: 600px ) and (max-width: 960px) {
+    font-size: 16px;
+  }
+  @media (min-width: 960px ){
+    font-size: 18px;
+  }
+}
+
+.blind {
+  visibility: hidden;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  font-size: 0;
+  line-height: 0
 }
